secret name changed

--- a/k8s-azure-deploy.yaml
+++ b/k8s-azure-deploy.yaml
@@ -38,4 +38,4 @@ spec:
         - name: VERSION
           value: "v1"
       imagePullSecrets:
-      - name: docker-depo-pass 
+      - name: docker-depo-pass-semraninsayfalari
