--- a/k8s-azure-deploy.yaml
+++ b/k8s-azure-deploy.yaml
@@ -1,13 +1,13 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: semraninsayfalari
----
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: semraninsayfalari2
+# ---
 apiVersion: v1
 kind: Service
 metadata:
   name: semraninsayfalari
-  namespace: semraninsayfalari
+  namespace: semraninsayfalari2
 spec:
   ports:
      - port: 80
@@ -19,7 +19,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: semraninsayfalari
-  namespace: semraninsayfalari
+  namespace: semraninsayfalari2
 spec:
   replicas: 1
   selector:
